test/spec_vectors/loop/fail/module_17.wat
(module (func $type-value-num-vs-void (loop (i32.const 1))))